fixed a couple of alignment issues

--- a/src/Components/FlashCards/FlashCards.css
+++ b/src/Components/FlashCards/FlashCards.css
@@ -19,7 +19,7 @@
     align-items: flex-start;
     background-color: transparent;
     padding: 0 2em 2em 1.2em;
-    margin: 2em 2em 2em 0;
+    margin: 4em 2em 2em 0;
     border-radius: 10px;
 }
 
@@ -230,7 +230,7 @@ li {
     color: cornsilk;
     font-size: 18px;
     font-weight: bolder;
-    margin: 5em 2em 2em 0;
+    margin: 6.5em 2em 2em 0;
     border-radius: 10px;
     box-shadow: 0 8px 38px maroon;
 }
